--- a/index.html
+++ b/index.html
@@ -71,6 +71,295 @@
         </div>
     </nav>
 
+    <!-- Hero -->
+    <header class="hero">
+
+        <div class="container hero-flex">
+            <div class="hero-content">
+                <h1>Optimisez Vos Décisions Avec Nos Rapports Power BI</h1>
+                <p>
+                    Nous développons des solutions sur mesure avec <strong> Power BI</strong> pour vous aider à prendre
+                    des décisions en
+                    entreprise.
+                </p>
+                <a href="#" class="btn">Prendre un RDV</a>
+            </div>
+            <img src="./images/header-course.png" alt="">
+        </div>
+        <svg class="frame-decoration" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
+            viewBox="0 0 1920 192.275">
+            <defs>
+                <style>
+                    .cls-1 {
+                        fill: #ffffff;
+                    }
+                </style>
+            </defs>
+            <title>frame-decoration</title>
+            <path class="cls-1"
+                d="M0,158.755s63.9,52.163,179.472,50.736c121.494-1.5,185.839-49.738,305.984-49.733,109.21,0,181.491,51.733,300.537,50.233,123.941-1.562,225.214-50.126,390.43-50.374,123.821-.185,353.982,58.374,458.976,56.373,217.907-4.153,284.6-57.236,284.6-57.236V351.03H0V158.755Z"
+                transform="translate(0 -158.755)" />
+        </svg>
+    </header>
+
+    <!-- Learn section
+    <section class="learn">
+        <div class="container">
+            <div class="section-header">
+                <h2></h2>
+
+
+                <div class="heading-border">
+                    <p>
+                       
+                    </p>
+                </div>
+            </div>
+
+            <div class="topics">
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="./images/description-1.jpg" alt="Visualisation et Analyse" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Visualisation et Analyse</h3>
+
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="./images/description-2.jpg" alt="Gain de Temps" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Gain de Temps</h3>
+
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="./images/description-3.jpg" alt="Sécurité des Données" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Sécurité des Données</h3>
+
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="./images/description-4.jpg" alt="Collaboration Améliorée" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Collaboration Améliorée</h3>
+
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="./images/description-5.jpg" alt="Flexibilité et Personnalisation" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Flexibilité et Personnalisation</h3>
+
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="./images/description-6.jpg" alt="Prise de Décision Stratégique" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Prise de Décision Stratégique</h3>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+ -->
+    <!-- Learn Section -->
+    <section class="learn">
+        <div class="container">
+            <div class="section-header">
+                <h2>Quels avantages offre Power BI pour vos analyses de données ?</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Grâce à Power BI, vous pourrez visualiser et analyser de grandes quantités de données de manière
+                    efficace et interactive.
+                    Optimisez votre temps en automatisant les processus et en vous concentrant sur l'analyse et la
+                    prise de décisions stratégiques.
+                </p>
+            </div>
+
+            <div class="topics">
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-1.jpg" alt="Visualisation" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Visualisation Interactive des Données</h3>
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-2.jpg" alt="Productivité" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Augmentation de la Productivité</h3>
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-3.jpg" alt="Précision" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Précision et Fiabilité des Données</h3>
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-4.jpg" alt="Décisions" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Prise de Décisions Éclairées</h3>
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-5.jpg" alt="Collaboration" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Collaboration Facilitée</h3>
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-6.jpg" alt="Personnalisation" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Personnalisation des Rapports</h3>
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-7.jpg" alt="Accessibilité" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Accessibilité sur Tous les Supports</h3>
+                    </div>
+                </div>
+                <div class="topic">
+                    <div class="topic-image">
+                        <img src="images/description-8.jpg" alt="Économie" />
+                    </div>
+                    <div class="topic-text">
+                        <h3>Économie de Temps et de Coûts</h3>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Course Chapter Section -->
+    <section class="section chapters" id="chapters">
+        <div class="container">
+            <div class="section-header">
+                <h2>Chapitres</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Découvrez les différents chapitres de notre cours Power BI pour maîtriser les bases de l'analyse de
+                    données et de la visualisation.
+
+                </p>
+            </div>
+
+            <div class="chapter-cards">
+                <div class="card">
+                    <img src="images/chapters-icon-1.svg" alt="chapter 1">
+                    <h3>Atteignez vos objectifs</h3>
+                    <p>
+                        Apprenez à définir vos objectifs et à les atteindre grâce à l'analyse de données.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="images/chapters-icon-2.svg" alt="chapter 2">
+                    <h3>Atteignez vos objectifs</h3>
+                    <p>
+                        Apprenez à définir vos objectifs et à les atteindre grâce à l'analyse de données.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="images/chapters-icon-3.svg" alt="chapter 3">
+                    <h3>Atteignez vos objectifs</h3>
+                    <p>
+                        Apprenez à définir vos objectifs et à les atteindre grâce à l'analyse de données.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Résumé des Avantages -->
+    <section class="summary" id="summary">
+        <div class="container">
+            <div class="section-header">
+                <h2>Résumé des Avantages</h2>
+                <div class="heading-border"></div>
+            </div>
+            <div class="section-lists">
+                <div class="list">
+                    <div class="list-header">Objectifs Clairs et Mesurables</div>
+                    <div class="list-item">
+                        1.1 Définissez des objectifs clairs et réalisables avec nos rapports Power BI, alignés avec vos
+                        buts stratégiques.
+                    </div>
+                    <div class="list-item">
+                        1.2 Utilisez des objectifs spécifiques pour guider vos décisions et assurer le succès de vos
+                        projets.
+                    </div>
+                    <div class="list-item">
+                        1.3 Évaluez l'efficacité de vos actions grâce à des objectifs mesurables intégrés dans nos
+                        rapports.
+                    </div>
+                </div>
+
+                <div class="list">
+                    <div class="list-header">Stratégies de Création de Contenu</div>
+                    <div class="list-item">
+                        2.1 Profitez de nos stratégies de création de rapports pour engager efficacement votre audience
+                        cible.
+                    </div>
+                    <div class="list-item">
+                        2.2 Nos rapports utilisent des techniques de storytelling et de visualisation pour inspirer
+                        l'action.
+                    </div>
+                    <div class="list-item">
+                        2.3 Optimisez vos processus de création de rapports pour maximiser l'impact et la pertinence des
+                        données.
+                    </div>
+                </div>
+
+                <div class="list">
+                    <div class="list-header">De la Conception à l'Implémentation</div>
+                    <div class="list-item">
+                        3.1 Nos rapports assurent une transition fluide de la conception des tableaux de bord à leur
+                        utilisation en entreprise.
+                    </div>
+                    <div class="list-item">
+                        3.2 Bénéficiez des meilleures pratiques en matière de création de rapports Power BI, incluant
+                        des conceptions réactives et optimisées.
+                    </div>
+                    <div class="list-item">
+                        3.3 Convertissez des maquettes de conception en tableaux de bord interactifs avec des
+                        visualisations soignées et impactantes.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 
