details and author section

--- a/index.html
+++ b/index.html
@@ -13,36 +13,30 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="icon" href="./images/favicon.png" />
-    <title>Welcome To Dashbr</title>
+    <title>Bienvenue chez Dashbr</title>
 </head>
 
 <body>
     <nav class="navbar">
         <div class="navbar-flex container">
-
             <img src="./images/logo.svg" alt="Dashbr logo" />
-
             <div class="main-menu-items">
                 <ul class="main-menu-list">
                     <li><a href="#">Accueil</a></li>
-                    <li><a href="#chapters">Chapitres</a></li>
+                    <li><a href="#learn">Fonctionnalités</a></li>
                     <li><a href="#summary">Résumé</a></li>
                     <li><a href="#takeaways">Points Clés</a></li>
                     <li><a href="#author">Auteur</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="https://www.linkedin.com/" target="_blank"> <i class="fa-brands fa-linkedin"></i></a>
+                    <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </li>
-
-
+                    <li><a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    </li>
                 </ul>
             </div>
 
             <!-- Mobile menu -->
-
-
             <div class="mobile-menu">
-
                 <!-- hamburger-button -->
                 <div class="mobile-menu-toggle">
                     <i class="fas fa-bars"></i>
@@ -52,35 +46,29 @@
                 <div class="mobile-menu-items">
                     <ul class="mobile-menu-list">
                         <li><a href="#">Accueil</a></li>
-                        <li><a href="#chapters">Chapitres</a></li>
+                        <li><a href="#learn">Fonctionnalités</a></li>
                         <li><a href="#summary">Résumé</a></li>
                         <li><a href="#takeaways">Points Clés</a></li>
                         <li><a href="#author">Auteur</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="facebook.com" target="_blank"> <i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/" target="_blank"> <i
-                                    class="fa-brands fa-linkedin"></i></a>
+                        <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         </li>
-
-
+                        <li><a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
-
-
         </div>
     </nav>
 
     <!-- Hero -->
     <header class="hero">
-
         <div class="container hero-flex">
             <div class="hero-content">
                 <h1>Optimisez Vos Décisions Avec Nos Rapports Power BI</h1>
                 <p>
-                    Nous développons des solutions sur mesure avec <strong> Power BI</strong> pour vous aider à prendre
-                    des décisions en
-                    entreprise.
+                    Nous développons des solutions sur mesure avec <strong>Power BI</strong> pour vous aider à prendre
+                    des décisions éclairées et améliorer la performance de votre entreprise.
                 </p>
                 <a href="#" class="btn">Prendre un RDV</a>
             </div>
@@ -102,91 +90,16 @@
         </svg>
     </header>
 
-    <!-- Learn section
-    <section class="learn">
-        <div class="container">
-            <div class="section-header">
-                <h2></h2>
-
-
-                <div class="heading-border">
-                    <p>
-                       
-                    </p>
-                </div>
-            </div>
-
-            <div class="topics">
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="./images/description-1.jpg" alt="Visualisation et Analyse" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Visualisation et Analyse</h3>
-
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="./images/description-2.jpg" alt="Gain de Temps" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Gain de Temps</h3>
-
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="./images/description-3.jpg" alt="Sécurité des Données" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Sécurité des Données</h3>
-
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="./images/description-4.jpg" alt="Collaboration Améliorée" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Collaboration Améliorée</h3>
-
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="./images/description-5.jpg" alt="Flexibilité et Personnalisation" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Flexibilité et Personnalisation</h3>
-
-                    </div>
-                </div>
-                <div class="topic">
-                    <div class="topic-image">
-                        <img src="./images/description-6.jpg" alt="Prise de Décision Stratégique" />
-                    </div>
-                    <div class="topic-text">
-                        <h3>Prise de Décision Stratégique</h3>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </section>
- -->
     <!-- Learn Section -->
-    <section class="learn">
+    <section class="learn" id="learn">
         <div class="container">
             <div class="section-header">
                 <h2>Quels avantages offre Power BI pour vos analyses de données ?</h2>
                 <div class="heading-border"></div>
                 <p>
                     Grâce à Power BI, vous pourrez visualiser et analyser de grandes quantités de données de manière
-                    efficace et interactive.
-                    Optimisez votre temps en automatisant les processus et en vous concentrant sur l'analyse et la
-                    prise de décisions stratégiques.
+                    efficace et interactive. Optimisez votre temps en automatisant les processus et en vous concentrant
+                    sur l'analyse et la prise de décisions stratégiques.
                 </p>
             </div>
 
@@ -256,49 +169,7 @@
                     </div>
                 </div>
             </div>
-
         </div>
-    </section>
-
-    <!-- Course Chapter Section -->
-    <section class="section chapters" id="chapters">
-        <div class="container">
-            <div class="section-header">
-                <h2>Chapitres</h2>
-                <div class="heading-border"></div>
-                <p>
-                    Découvrez les différents chapitres de notre cours Power BI pour maîtriser les bases de l'analyse de
-                    données et de la visualisation.
-
-                </p>
-            </div>
-
-            <div class="chapter-cards">
-                <div class="card">
-                    <img src="images/chapters-icon-1.svg" alt="chapter 1">
-                    <h3>Atteignez vos objectifs</h3>
-                    <p>
-                        Apprenez à définir vos objectifs et à les atteindre grâce à l'analyse de données.
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="images/chapters-icon-2.svg" alt="chapter 2">
-                    <h3>Atteignez vos objectifs</h3>
-                    <p>
-                        Apprenez à définir vos objectifs et à les atteindre grâce à l'analyse de données.
-                    </p>
-                </div>
-                <div class="card">
-                    <img src="images/chapters-icon-3.svg" alt="chapter 3">
-                    <h3>Atteignez vos objectifs</h3>
-                    <p>
-                        Apprenez à définir vos objectifs et à les atteindre grâce à l'analyse de données.
-                    </p>
-                </div>
-
-            </div>
-        </div>
-
     </section>
 
     <!-- Résumé des Avantages -->
@@ -356,6 +227,150 @@
                         visualisations soignées et impactantes.
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Infos -->
+    <section class="info" id="info">
+        <div class="info-container">
+            <div class="info-left"></div>
+            <div class="info-content">
+                <h2>À Qui S'adressent Nos Rapports Power BI ?</h2>
+                <p>
+                    Nos rapports Power BI sont conçus pour ceux qui cherchent à améliorer leur prise de décision grâce à
+                    des analyses de données avancées. Que vous soyez un professionnel de la finance, un responsable
+                    marketing, ou un dirigeant d'entreprise souhaitant optimiser les performances de votre organisation.
+                </p>
+                <ul>
+                    <li><i class="fas fa-check"></i> Professionnels de la Finance</li>
+                    <li><i class="fas fa-check"></i> Responsables Marketing</li>
+                    <li><i class="fas fa-check"></i> Directeurs des Ventes</li>
+                    <li><i class="fas fa-check"></i> Entrepreneurs</li>
+                    <li><i class="fas fa-check"></i> Dirigeants d'Entreprise</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Points Clés -->
+    <section class="takeaways section" id="takeaways">
+        <div class="container">
+            <div class="section-header">
+                <h2>Points Clés</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Cette section met en lumière certains des principaux avantages que vous obtiendrez en utilisant nos
+                    rapports Power BI. Voici ce que vous pouvez espérer accomplir :
+                </p>
+            </div>
+            <div class="takeaways-cards">
+                <div class="card">
+                    <i class="fas fa-rocket fa-3x text-primary"></i>
+                    <p>
+                        <strong>Innovations Technologiques</strong> - Utilisez les dernières avancées en matière de BI
+                        pour des analyses de données plus rapides et plus précises.
+                    </p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-user-shield fa-3x text-primary"></i>
+                    <p>
+                        <strong>Service Client Personnalisé</strong> - Bénéficiez d'un accompagnement sur mesure pour
+                        répondre à vos besoins spécifiques.
+                    </p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-layer-group fa-3x text-primary"></i>
+                    <p>
+                        <strong>Solutions Flexibles</strong> - Adaptez nos rapports à vos exigences pour maximiser leur
+                        impact.
+                    </p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-tools fa-3x text-primary"></i>
+                    <p>
+                        <strong>Support Technique</strong> - Accédez à une assistance technique dédiée pour garantir la
+                        continuité de vos analyses.
+                    </p>
+                </div>
+                <div class="card">
+                    <i class="fas fa-chart-line fa-3x text-primary"></i>
+                    <p>
+                        <strong>Croissance et Performance</strong> - Utilisez nos rapports pour identifier les
+                        opportunités de croissance et améliorer vos performances.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Détails des Dashboards -->
+    <section class="details section" id="details">
+        <div class="container details-flex">
+            <img src="images/details.png" alt="details" />
+            <div class="details-content">
+                <h2>Accélérez Votre Reporting avec Power BI</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Nous créons des solutions personnalisées avec Power BI pour rendre vos analyses de données plus
+                    efficaces et vous aider à prendre des décisions éclairées. Remplacez vos anciens fichiers Excel par
+                    des tableaux de bord interactifs, multi-sources de données, comme SQL, Excel, et Google Analytics.
+                </p>
+                <a href="#" class="btn">Voir les Détails</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Informations sur l'Auteur -->
+    <section class="details section" id="author">
+        <div class="container details-flex">
+            <img src="images/author.png" alt="details" />
+            <div class="details-content">
+                <h2>Informations sur l'Auteur</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Découvrez l'expertise et les contributions de notre spécialiste Power BI. Avec une solide expérience
+                    en analyse de données et en création de dashboards, il transforme vos données en insights
+                    exploitables.
+                </p>
+                <ul>
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i>
+                        <strong>Expertise :</strong> Visualisation de données et BI
+                    </li>
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i>
+                        <strong>Expérience :</strong> Plus de 10 ans dans l'analyse de données
+                    </li>
+                    <li>
+                        <i class="fas fa-chevron-circle-right text-primary"></i>
+                        <strong>Compétences :</strong> SQL, Excel, Google Analytics, et plus
+                    </li>
+                </ul>
+                <a href="#" class="btn">Voir les Détails</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Statistiques -->
+    <section class="stats section" id="stats">
+        <div class="container stats-flex">
+            <img src="images/stats.png" alt="stats" />
+            <div class="stats-content">
+                <div class="stats-highlights">
+                    <h3 aria-labelledby="stats-highlights">Nos Points Forts</h3>
+                    <p id="stats-highlights">Découvrez pourquoi nos rapports Power BI sont la meilleure solution pour
+                        vos besoins en analyse de données.</p>
+                </div>
+                <div class="stats-features">
+                    <ul>
+                        <li><i class="fas fa-check text-primary"></i> Solutions Innovantes et Personnalisées</li>
+                        <li><i class="fas fa-check text-primary"></i> Support Technique et Service Client Dédié</li>
+                        <li><i class="fas fa-check text-primary"></i> Expertise Avancée en Analyse de Données</li>
+                        <li><i class="fas fa-check text-primary"></i> Flexibilité et Adaptabilité des Rapports</li>
+                    </ul>
+                </div>
+                <a href="#" class="btn">Prendre un RDV</a>
             </div>
         </div>
     </section>
